Fixing bouncing on mobile

--- a/cv/css/style.css
+++ b/cv/css/style.css
@@ -1,6 +1,6 @@
 body {
   padding-top: 50px;
-  font-size: 1.8em !important;
+  font-size: 1.7em !important;
 }
 
 .parallax-container {
@@ -18,6 +18,7 @@ section {
 }
 
 #intro {
+  min-height: 40px;
   text-align: center;
   font-family: Courier;
   margin-bottom: 20px;
